# scs-sdk-telemetry

./: Cargo.toml  README.md
examples/: sdk_telemetry.rs
src/: convert.rs  lib.rs  main.rs  shared_memory.rs
src/types/: aux_level.rs  common.rs  control.rs  enums.rs  eular.rs  game.rs  game_play_event.rs  job.rs  job_market.rs  math.rs  mod.rs  motor.rs  movement.rs  navigation.rs  offence.rs  placement.rs  shifter_type.rs  special_events.rs  substance.rs  telemetry.rs  trailer.rs  truck.rs  unit.rs  vector.rs  version.rs  wheels.rs
