[package]
name = "scs-sdk-telemetry"
description = "Rust wrapper for the ETS2 (Euro Truck Simulator 2) and ATS (American Truck Simulator) Telemetry SDK plug-in."
version = "0.1.0"
edition = "2021"
authors = ["NightFeather"]
license = "MPL-2.0"
homepage = "https://github.com/NightFeather0615/scs-sdk-telemetry"
repository = "https://github.com/NightFeather0615/scs-sdk-telemetry"
exclude = [
  ".vscode"
]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "s"

[features]
default = []
json = ["serde", "serde_json"]

[dependencies.windows]
version = "0.51.1"
features = ["Win32_System_Memory", "Win32_Foundation"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.105"
optional = true
